[tool.poetry]
name = "comp100-2021f-ps0-gorkem-varis"
version = "0.1.0"
description = ""
authors = ["GORKEMVARIS <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pylab-sdk = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
